fix: theme line-height truncated

--- a/src/styles/expose.less
+++ b/src/styles/expose.less
@@ -332,8 +332,5 @@
     &-caret {
       animation-name: @common-caret-style;
     }
-    &-line-height {
-      flex-grow: @line-height-base;
-    }
   }
 }
